--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/college
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:sqlserver://springazureserver.database.windows.net:1433;database=springazure;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=springadmin@springazureserver
+spring.datasource.password=Admin@123
+spring.datasource.database=springazure
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.devtools.add-properties=false
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
+
+#jdbc:sqlserver://springazure.database.windows.net:1433;database=springazure;user=CloudSA7fa5c50c@springazure;password={your_password_here};\
+#  encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+#jdbc:sqlserver://springazure.database.windows.net:1433;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+
+jdbc:sqlserver://springazureserver.database.windows.net:1433;database=springazure;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
